# subsgen-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  GCP_SETUP.md  GITHUB_SETUP.md  README.md  RENDER_SETUP.md  cloudbuild.yaml  fly.toml  main.py  pyproject.toml  render.yaml
.github/workflows/: cloud-run-deploy.yml  gcp-deploy.yml
agents/: brain.py  color_grader.py  crew.py  director.py  holistic_reviewer.py  key_manager.py  music_supervisor.py  schemas.py  subtitle_verifier.py  transcriber.py  video_analyst.py
agents/flows/: __init__.py  reel_flow.py  state.py
assets/music/: README.md
routers/: reel_pipeline.py  video.py
scripts/: download_fallback_music.py  gcp-cleanup.sh  gcp-setup.sh  setup-gcp.ps1  setup-gcp.sh  setup-gcs-bucket.ps1
services/: audio_master.py  color_grade.py  gcs_upload.py  music_selector.py  subtitle.py  transcription.py  video_editor.py
tests/: README.md  conftest.py  test_brain.py  test_holistic_reviewer.py  test_music_supervisor.py  test_reel_flow_e2e.py  test_subtitle_verifier.py  test_transcriber.py  test_video_analyst.py
utils/: ffmpeg_check.py  file_handler.py
