[project]
name = "instagram-subtitles-backend"
version = "0.2.0"
description = "FastAPI backend for Instagram-style subtitle generation with AI reel pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "faster-whisper>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=1.24.0",
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "langchain-groq>=0.2.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["routers", "agents", "services", "utils"]
