[project]
name = "instagram-subtitles-backend"
version = "0.2.0"
description = "FastAPI backend for Instagram-style subtitle generation with AI reel pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "crewai>=0.80.0",
    "langchain-groq>=0.2.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-cloud-storage>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["routers", "agents", "services", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
